# crack-detection-SHM

./: .gitignore  README.md  context.txt  pyproject.toml  requirements.txt  technologies.txt
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
.refact/buddy/chats/workflows/: buddy_architecture_drift_watcher.json  buddy_docs_gardener.json  buddy_pr_issue_matchmaker.json  buddy_refactor_hunter.json  buddy_setup_coach.json  refact_self_critic.json
backend/: __init__.py
backend/app/: main.py
data/processed/: manifest.summary.json
data/results/: localizations.summary.json  methodology_summary.json  metrics.json  summary.json
docs/: BUSINESS_PROJECT_OVERVIEW.md  CODEX_CRACKNET_METHODOLOGY_INSTRUCTIONS.md  IMPROVED_MODEL_EXECUTION_GUIDE.md  LOCAL_ENVIRONMENT_SETUP.md  SOLUTION.md  TECHNICAL_SOLUTION.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
scripts/: bootstrap.ps1  bootstrap.sh  download_data.ps1  download_data.sh  make_demo_data.ps1  make_demo_data.sh  run_backend.ps1  run_backend.sh  run_fresh_data_processing.ps1  run_fresh_data_processing.sh  run_frontend.ps1  run_frontend.sh  run_pipeline.ps1  run_pipeline.sh
sdnet_pipeline/: __init__.py  config.py  demo_data.py  download.py  features.py  inference.py  localization.py  manifest.py  methodology.py  train.py  utils.py
