[project]
name = "sdnet-local-poc"
version = "0.1.0"
description = "Local end-to-end SDNET2018 concrete crack detection proof of concept."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "scikit-image>=0.24.0",
  "pillow>=10.4.0",
  "python-multipart>=0.0.9",
  "joblib>=1.4.0",
  "kagglehub>=0.3.0",
  "tqdm>=4.66.0"
]

[project.scripts]
sdnet-download = "sdnet_pipeline.download:main"
sdnet-make-demo-data = "sdnet_pipeline.demo_data:main"
sdnet-build-manifest = "sdnet_pipeline.manifest:main"
sdnet-train = "sdnet_pipeline.train:main"
sdnet-infer = "sdnet_pipeline.inference:main"
sdnet-localize = "sdnet_pipeline.localization:main"
sdnet-methodology-summary = "sdnet_pipeline.methodology:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdnet_pipeline", "backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
